Added More Pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="innav">
             <a href="#">Styles<span>Stuio.</span></a>
             <div class="nav2">
-                <div>Let's Talk</div>
+                <div> <a href="/talk.html">Let's Talk</a></div>
                 <div>
                     <svg width="100%" height="100%" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M3.125 10H16.875" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -31,7 +31,7 @@
                 Designing digital product with emphasis on <span>visual design</span>
             </h1>
             <div class="sec_btm">
-                <div>Let's Talk -></div>
+                <div class="talk_2">Let's Talk -></div>
                 <p>A multidisciplinary designer harnessing the power of design to achieve online goals.</p>
             </div>
         </div>
@@ -200,8 +200,8 @@
                 <h1>Let's rock <span class="color">with me</span></h1>
             </div>
             <div class="sec7_btm">
-                <a href="">About Me</a>
-                <a href="">Works</a>
+                <a href="/about.html">About Me</a>
+                <a href="/work.html">Works</a>
                 <a href="">Insight</a>
             </div>
         </div>
