Porjects added and done other changes

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 Hello! I'm Hari
             </div>
             <h1 class="sec_mid">
-                Designing digital product with emphasis on <span>visual design</span>
+                Crafting Modern, Visually-Driven Websites That <span>Stand Out</span>
             </h1>
             <div class="sec_btm">
                 <div class="talk_2">Let's Talk -></div>
-                <p>A multidisciplinary designer harnessing the power of design to achieve online goals.</p>
+                <p>A Passionate Developer Blending Design and Functionality to Achieve Business Goals</p>
             </div>
         </div>
     </div>
@@ -84,8 +84,8 @@
 
     <div class="section">
         <div class="sec3">
-            <h2 class="sec_top">A visual designer focused on creating emotional digital experience</h2>
-            <p class="sec3_mid">Concentrate on your primary objective which is expanding your business, and leave it to me to ensure that your business is efficiently portrayed in the digital realm and distinguishes itself from the rivals.</p>
+            <h2 class="sec_top">Crafting Interactive Web Solutions that Inspire and Connect with Users</h2>
+            <p class="sec3_mid">Let me handle the digital side while you focus on your goals. I'll create a website that brings your business vision to life and attracts the right audience.</p>
             <div class="sec3_btm">
                 <div class="sec3_bl talk">
                     About Me->
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    <div class="section">
+    <!-- <div class="section">
         <div class="sec4">
             <p class="sec4_top">
                 "I had the pleasure of working with Ivan on a recent project, and I was blown away by their creativity and attention to detail. I highly recommend Ivan for anyone looking for a talented and professional designer."
@@ -125,9 +125,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="section">
+    <!-- <div class="section">
         <div class="sec5">
             <div class="sec5_l">
                 <h5>Awards & Reconginatoin</h5>
@@ -164,29 +164,29 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     
     <div class="section section6">
         <div class="sec6">
             <div class="sec6_top">
                 <div class="sec6_title">Insight</div>
-                <div class="talk">View ALL Insights -></div>
+                <!-- <div class="talk">View ALL Insights -></div> -->
             </div>
             <div class="sec6_btm">
                 <div class="blog">
-                    <img src="https://cdn.prod.website-files.com/64acf5270486f7df09fb7778/64c33db68e3559214fa98e8d_Blog%20Image%20-%204-p-500.png" alt="">
-                    <h3>The Power of Typography in Visual Design: Enhancing Communication and Impact</h3>
-                    <p>Uncover the significance of typography in visual design and learn how to</p>
+                    <img src="https://i.ibb.co/Jpn8D7N/DALL-E-2024-11-09-16-40-51-A-modern-and-sleek-digital-workspace-with-a-computer-mobile-device-and-ta.webp" alt="">
+                    <h3>The Digital Age Demands a Digital Presence</h3>
+                    <p>Discover why an online presence is essential for modern businesses and how a well-crafted website can elevate your brand, engage customers, and drive growth.</p>
                 </div>
                 <div class="blog">
-                    <img src="https://cdn.prod.website-files.com/64acf5270486f7df09fb7778/64c33db68e3559214fa98e8d_Blog%20Image%20-%204-p-500.png" alt="">
-                    <h3>The Power of Typography in Visual Design: Enhancing Communication and Impact</h3>
-                    <p>Uncover the significance of typography in visual design and learn how to</p>
+                    <img src="https://i.ibb.co/7bhbJNP/DALL-E-2024-11-09-16-44-44-A-professional-and-dynamic-image-illustrating-how-a-website-can-boost-bus.webp" alt="">
+                    <h3>How a Website Can Boost Your Business Sales</h3>
+                    <p>Learn how a well-designed website can enhance your sales strategy, attract more customers, and convert traffic into revenue with the right digital tools and user experience.</p>
                 </div>
                 <div class="blog">
-                    <img src="https://cdn.prod.website-files.com/64acf5270486f7df09fb7778/64c33db68e3559214fa98e8d_Blog%20Image%20-%204-p-500.png" alt="">
-                    <h3>The Power of Typography in Visual Design: Enhancing Communication and Impact</h3>
-                    <p>Uncover the significance of typography in visual design and learn how to</p>
+                    <img src="https://i.ibb.co/chCq0BK/DALL-E-2024-11-09-16-46-20-A-professional-and-modern-office-setting-with-a-business-team-collaborati.webp" alt="">
+                    <h3>The Cost-Effective Solution to Business Growth</h3>
+                    <p>Explore how investing in a professionally designed website can be a budget-friendly way to accelerate business growth, improve customer engagement, and maximize long-term returns.</p>
                 </div>
                 <div class="talk sec2_2t">View All Insights -></div>
             </div>
@@ -210,7 +210,7 @@
         <div class="sec7 foot">
             <div class="sec7_top footer_top">
                 <h1>StyleStudio</h1>
-                <p>A freelance digital designer and illustrator currently based in Berlin</p>
+                <p>A freelance digital designer and illustrator currently based in India</p>
             </div>
             <div class="sec7_btm foot_btm">
                 <a href="">About Me</a>
@@ -227,5 +227,27 @@
         </div>
         <p class="foot_l">©2024. Designed by Shivam Bhau - Powered by Copy Paste Ability</p>
     </div>
+
+<script>
+    const links = [
+        "https://reputationtoday.in/branding-in-the-digital-age-why-your-online-presence-matters-more-than-ever/",
+        "https://www.eposnow.com/us/resources/how-much-does-a-website-increase-sales-for-your-business/",
+        "https://www.codesgesture.com/blog/3068/How-is-Website-Cost-Effective-Tool-for-Busine..."
+    ];
+    const blogs = document.querySelectorAll(".blog");
+
+    blogs.forEach((blog,index) => {
+        blog.addEventListener('click', function() {
+            window.open(links[index], '_blank');
+        });
+    });
+
+    const projects = document.querySelectorAll(".sec2_2");
+    projects.forEach((project,index) => {
+        project.addEventListener('click', function() {
+            window.open("/project.html", '_blank');
+        });
+    });
+</script>
 </body>
 </html>
